[package]
name = "account"
version = "0.1.0"
edition = "2021"

[dependencies]
scc = "2.1.7"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.75"
snowflaker = "0.3.6"
sled = "0.34.7"
rmp-serde = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
fern = "0.6.2"
log = "0.4.20"
mysql = "25.0.1"
lockfree-object-pool = "0.1.4"
redis = "0.27.2"